--- a/myapp/static/home.css
+++ b/myapp/static/home.css
@@ -6,14 +6,28 @@ body {
 
 #navwrapper {
   width: 100%;
-  height: 82px;
+  height: 115px;
   background-color: #3b5998;
+}
+#navwrapper a{
+  font-size: 15px;
+  color: white;
 }
 
 #navbar {
   margin: 0 auto;
   width:980px;
   height:59px;
+}
+
+#hello{
+  width: 100px;
+  height: 100px;
+  background-color: #ffd7c2;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+
 }
 
 #contentwrapper {
@@ -299,4 +313,5 @@ margin-bottom: 10px;
   margin-top: 10px;
   padding-top: 15px;
 }
+
 
