--- a/myapp/templates/profilelist.html
+++ b/myapp/templates/profilelist.html
@@ -50,7 +50,8 @@
         <h3>Hobby</h3>
         <input type="text" name="hobby" value="{{user.hobby }}" maxlength="254" id="id_hobby">
   
-    
+        <input type="text" name="hobby" value="{{user.hobby }}" maxlength="254" id="id_hobby">
+ 
     {% comment %} <td><div id="button">Log In</div></td> {% endcomment %}
     <td><input type="submit" value="Create Profile"> </input></td>
         </div>
