changes in msg.html

--- a/myapp/templates/msg.html
+++ b/myapp/templates/msg.html
@@ -25,7 +25,7 @@
   {{form.as_p}}
   <input type="submit" value="Submit">
 </form>
-
+<h1>kuchh bhi</h1>
 
 {% comment %} <form method="post"  enctype="multipart/form-data">
     {% csrf_token %}
