--- a/myapp/templates/registration/password_reset_confirm.html
+++ b/myapp/templates/registration/password_reset_confirm.html
@@ -37,7 +37,7 @@
 </body>   {% endcomment %}
 
 
-{% if validlink %}
+{% comment %} {% if validlink %}
 
 <h1>Set a new password!</h1>
 <form method="POST">
@@ -50,4 +50,19 @@
 
 <p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
 
-{% endif %}
+{% endif %} {% endcomment %}
+{% comment %} {% load crispy_forms_tags %}   {% endcomment %}
+
+
+  
+  <!--Password Reset Confirm-->
+    <div class="container p-5">
+	    <h2 class="font-weight-bold mt-3">Password Reset Confirm</h2>
+		<hr>
+        <p>Please enter your new password.</p>
+        <form method="POST">
+            {% csrf_token %}
+            {{form}}                    
+            <button class="btn btn-primary" type="submit">Reset password</button>
+        </form>
+    </div>
