forgot password set

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -64,7 +64,7 @@
         </div> 
       </td> 
           
-      <td class="row2 h" style="display: flex;"><a href="/reset/">Forgot Password?</a></td>
+      <td class="row2 h" style="display: flex;"><a href="/password_reset/">Forgot Password?</a></td>
       <td class="row2 h" style="display: flex;"><a href="/logout/">logout</a></td>
   
       {% for message in messages %}
