--- a/myapp/templates/registration/password_reset_confirm.html
+++ b/myapp/templates/registration/password_reset_confirm.html
@@ -62,7 +62,18 @@
         <p>Please enter your new password.</p>
         <form method="POST">
             {% csrf_token %}
-            {{form}}                    
+          {% for fm in form %}
+          {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}<br><br>
+          {% endfor %}
+            {% comment %} {{form}}                     {% endcomment %}
             <button class="btn btn-primary" type="submit">Reset password</button>
         </form>
     </div>
+
+
+
+
+
+  {% comment %} {% for fm in form %}
+  {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}<br><br>
+{% endfor %} {% endcomment %}
