--- a/myapp/templates/registration/password_reset_form.html
+++ b/myapp/templates/registration/password_reset_form.html
@@ -9,12 +9,12 @@
     {% comment %} <link rel="stylesheet" href="{% static '/login.css' %}"> {% endcomment %}
     <title>Homepage</title>
 </head>
-<body>
+{% comment %} <body>
   <h1></h1>
      
 
   <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
+  {% csrf_token %}
   {% for fm in password_reset_form %}
   {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}<br><br>
   {% endfor %}
@@ -23,18 +23,23 @@
  <input type="submit" value="send email">
  {% comment %} <a href="/logout/">logout</a> <br><br> {% endcomment %}
  {% comment %} <a href="/change_password/">changepassword</a> {% endcomment %}
-</form>    
-</body>  
- 
+{% comment %} </form>    
+</body>   {% endcomment %}
+  
 
 
-{% comment %} <div class="container p-5">
+<div class="container p-5">
   <h2 class="font-weight-bold mt-3">Reset Password</h2>
 <hr>
 <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
    <form method="POST">
        {% csrf_token %}
-       {{ password_reset_form}}                    
+       {{form}}                    
        <input  type="submit">Send email</button>
    </form>
-</div>  {% endcomment %}
+</div> 
+
+
+{% comment %} {% for fm in form %}
+  {{fm.label_tag}} {{fm}} {{fm.errors|striptags}}<br><br>
+{% endfor %} {% endcomment %}
